<resources>
    <string name="app_name">PlannerWay</string>

    <!-- Sign in strings-->
    <string name="signin">Signin</string>
    <string name="createAccount">Create Account</string>
    <string name="or">Or</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="passwordConstraint">*Password should contain atleast 8 characters</string>
    <string name="enterEmail">Enter your accound email</string>
    <string name="enterPassword">Enter your accound password</string>
    <!--Default Values-->
    <string name="default_web_id" translatable="false">13565275701-90l48dbb91kmt8gfe7h5kk4rljuue5j0.apps.googleusercontent.com</string>
    <!-- TODO:Navigation Strings -->
    <string name="chat">Chat</string>
    <string name="addnewcontact">Add New Contact</string>
    <string name="entergroupname">Enter Group Name(Required)</string>
    <string name="schedule">Schedule</string>
    <string name="account">Account</string>
    <string name="viewprofile">View or Edit your profile ></string>
    <string name="save">Save</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="logout">Logout</string>
    <string name="requested">Requested</string>
    <string name="username">Username </string>
    <string name="name">Name </string>
    <string name="email">Email </string>
    <string name="password">Password </string>
    <string name="dob">Date of Birth (yyyy/mm/dd)</string>
    <string name="resetpassword">Reset Password</string>
    <string name="sendlink">Send Link</string>
    <string name="linksent">Link Sent</string>
    <string name="verified">Verified</string>
    <string name="verifyemail">Verify Email </string>
    <string name="sendemaillink">Send Verification link</string>
    <string name="emailsent">verification link Sent</string>
    <string name="clicktochangeprofileimage">Click to Change Profile Image</string>
    <string name="saveprofile">Save profile</string>
    <string name="searchperson">Search result by username , email or contact number</string>
    <string name="optional">Set Group Name And Optional Group Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>